fix: 公開名を scoped に変更

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "contrib",
+  "name": "@transform-ts/contrib",
   "version": "1.0.0",
   "description": "transform-ts contrib modules",
   "main": "dist/index.js",
