--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,6 +12,6 @@ jobs:
         node-version: '14.x'
         registry-url: 'https://registry.npmjs.org'
     - run: yarn install
-    - run: yarn publish
+    - run: yarn publish --non-interactive
       env:
         NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
